Bug#21215  mysqldump creating incomplete backups without warning  - Add call to 'safe_exit' function when db query fails.